UCF-APR2.4/ftr main/force-app/main/default/objects/Partner_State_ENNI_Detailed_Mapping__mdt/Partner_State_ENNI_Detailed_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Partner State ENNI Detailed Mapping</label>
    <pluralLabel>Partner State ENNI Detailed Mappings</pluralLabel>
</CustomObject>