UCF-APR2.4/ftr main/force-app/main/default/objects/Partner_State_ENNI_Detailed_Mapping__mdt/fields/CILLI_FOR_ASR__c.field-meta.xml
<CustomField>
    <fullName>CILLI_FOR_ASR__c</fullName>
    <label>CILLI FOR ASR</label>
    <length>50</length>
    <type>Text</type>
</CustomField>