UCF-APR2.4/ftr main/force-app/main/default/objects/Partner_State_ENNI_Detailed_Mapping__mdt/fields/Circuit_ID__c.field-meta.xml
<CustomField>
    <fullName>Circuit_ID__c</fullName>
    <label>Circuit ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>