UCF-APR2.4/ftr main/force-app/main/default/objects/Partner_State_ENNI_Detailed_Mapping__mdt/fields/EIA_RUID_RUID_2__c.field-meta.xml
<CustomField>
    <fullName>EIA_RUID_RUID_2__c</fullName>
    <label>EIA RUID (RUID 2)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>