UCF-APR2.4/ftr main/force-app/main/default/objects/Partner_State_ENNI_Detailed_Mapping__mdt/fields/ENNI_NID_CILLI_CODE__c.field-meta.xml
<CustomField>
    <fullName>ENNI_NID_CILLI_CODE__c</fullName>
    <label>ENNI NID CILLI CODE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>