UCF-APR2.4/ftr main/force-app/main/default/objects/Partner_State_ENNI_Detailed_Mapping__mdt/fields/ICR__c.field-meta.xml
<CustomField>
    <fullName>ICR__c</fullName>
    <label>ICR</label>
    <length>20</length>
    <type>Text</type>
</CustomField>