UCF-APR2.4/ftr main/force-app/main/default/objects/Partner_State_ENNI_Detailed_Mapping__mdt/fields/SECLOC_CILLI__c.field-meta.xml
<CustomField>
    <fullName>SECLOC_CILLI__c</fullName>
    <label>SECLOC CILLI</label>
    <length>50</length>
    <type>Text</type>
</CustomField>